--- a/src/Example/Example.Website/Views/GlassExample/Index.cshtml
+++ b/src/Example/Example.Website/Views/GlassExample/Index.cshtml
@@ -1,3 +1,3 @@
-﻿@model Example.Library.Models.PageModel
+﻿@inherits Glass.Mapper.Sc.Web.Mvc.GlassView<Example.Library.Models.GlassModels.Page>
 <h2>View for GlassExampleController</h2>
-<p>@Model.Title</p>
+<p>@Editable(Model, x => x.Title)</p>
